# CuteGL

./: .gitignore  CMakeLists.txt
assets/models/teapot/: source
src/: CMakeLists.txt  asset_loader.cpp  asset_loader.h  camera.cpp  camera.h  framebuffer.cpp  framebuffer.h  input_manager.cpp  input_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mesh.cpp  mesh.h  obj_parser.cpp  obj_parser.h  opengl_window.cpp  opengl_window.h  openglwindow.cpp  openglwindow.h  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h  trianglewindow.cpp  trianglewindow.h  util.cpp  util.h
src/shaders/: normal_fs.glsl  normal_test_vs.glsl  normal_vs.glsl  plane_vs.glsl  post_process_fs.glsl  post_process_vs.glsl  texture_fs.glsl  texture_noshade_fs.glsl  texture_noshade_vs.glsl
